# MSUtils

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  genindex.html  index.html  module.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_cov.html  usage.html
MSUtils/: __init__.py
MSUtils/ReducedBasis/: ReducedBasis.py  data.py  eval.py  train.py
MSUtils/TPMS/: tpms.py  tpms_example.py  tpms_functions.py
MSUtils/TexGen/: 2dweave.py  DecoupledLToLTextile.py  LayeredTextile2.py  NonCrimpFabric.py  TriaxialBraid.py  WeftKnit.py  WeftKnitClass.py  cotton.py  custom_weave1.py  custom_weave2.py
MSUtils/fans_dashboard/: PlotYoungsModulus.py  postprocessing.py  tensortools.py  utils.py
MSUtils/general/: ComBoMicrostructureImage.py  MicrostructureImage.py  compute_correlation_length.py  h52xdmf.py  merge_h5_files.py  resize_image.py  vti2h5.py  vtk2h5.py
MSUtils/junk/: pcloud2pcloud_distance.py  pointInPolytest.py  test.ipynb  voronoi2D.py  voronoi3D.py  vtk_surface.py
MSUtils/junk/ComBoNormalPy/: ComBoNormal.py  main.py
MSUtils/lattices/: lattice_definitions.py  lattice_image.py
MSUtils/sampling/: generate_loadpaths.py  minerpo.py  test_sampling.py
MSUtils/scratch/: singlemat_test.py  test.ipynb
MSUtils/spinodoids/: __init__.py  generate_spinodal_micorstructure.py  generate_spinodal_microstructure.py  generate_spinodal_spectral_filter.py
MSUtils/voronoi/: VoronoiGBErosion.py  VoronoiImage.py  VoronoiSeeds.py  VoronoiTessellation.py  main.py  voronoi_foam.py  voronoi_helpers.py
_sources/: module.rst.txt  usage.rst.txt
data/: fibers1.h5
docs/: conf.py  index.rst  module.rst  test_cov.rst
docs/scripts/: push_docs.sh  update_docs_by_hand.ps1  update_docs_by_hand.sh
general/: MicrostructureImage.py  h52xdmf.py
junk/: voronoi_helpers_edge.py
lattices/: lattice_image.py
test/: pcloud2pcloud_distance.py  pointInPolytest.py  test_MicrostructureImage.py  test_VoronoiSeeds.py  test_main.py  test_resize_image.py  test_voronoi.py  test_voronoi_seeds.py
voronoi/: VoronoiImage.py  VoronoiSeeds.py  main.py
