[project]
name = "MSUtils"
version = "0.1.0"
description = "Microstructure Utilities by Data Analytics in Engineering (DAE) group, University of Stuttgart"
authors = [{name = "Sanath Keshav", email = "keshav@mib.uni-stuttgart.de"}]

[dependencies]
python = ">=3.9,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["MSUtils"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
MSUtils = { path = ".", editable = true }
pyrecest = {git = "https://github.com/FlorianPfaff/pyRecEst.git"}

[tool.pixi.tasks.h52xdmf]
args = ["file", { arg = "extra", default = "" }]
cmd  = "cd \"$INIT_CWD\" && python -m MSUtils.general.h52xdmf {{ extra }} {{ file }}"

[tool.pixi.dependencies]
numpy = ">=1.26.4,<2"
h5py = ">=3.15.1,<4"
scipy = ">=1.16.2,<2"
matplotlib = ">=3.10.7,<4"
scikit-image = ">=0.25.2,<0.26"
lxml = ">=6.0.2,<7"
plotly = ">=6.3.1,<7"
sympy = ">=1.14.0,<2"
ipykernel = ">=7.0.1,<8"
quaternion = ">=2024.0.12,<2025"
beartype = ">=0.22.3,<0.23"
pre-commit = ">=4.3.0,<5"
pyvista = ">=0.46.3,<0.47"
meshio = ">=5.3.5,<6"
nbformat = ">=5.10.4,<6"
puma = ">=3.2.0,<4"


[tool.pixi.environments]
default = {features = [], solve-group = "default"}
